# nodieval

./: .gitignore  Cargo.toml  Makefile.toml  README.md  index.html  rust-toolchain  wasm.js
.github/workflows/: cd.yml  ci.yml  release.yaml
base/: Cargo.toml
base/src/: lib.rs
client/: .gitignore  Cargo.toml  Makefile.toml  index.html
client/game_plugin/: Cargo.toml
client/src/: full_viewport.rs  main.rs
client/src/game/: actions.rs  audio.rs  geometry.rs  menu.rs  mod.rs  player.rs
client/src/game/loading/: mod.rs
core/: Cargo.toml
src/: main.rs
