[package]
name = "nodieval"
version = "0.1.0"
publish = false
authors = ["Karol Belina <karolbelina@gmail.com>"]
edition = "2018"

[profile.dev]
opt-level = 1

[features]
default = [
    "bevy/bevy_gltf",
    "bevy/bevy_winit",
    "bevy/render",
    "bevy/png",
    "game_plugin/default"
]

native = [
    "bevy/bevy_wgpu",
    "game_plugin/native"
]

web = [
    "bevy_webgl2",
    "web-sys",
    "gloo-events",
]

dev = [
    "bevy/dynamic",
    "native",
]

[dependencies]
bevy = { version = "0.5.0", default-features = false }
game_plugin = { path = "game_plugin" }
winit = "0.24.0"
core = { path = "../core" }

bevy_webgl2 = { version = "0.5.0", optional = true }
web-sys = { version = "0.3.45", features = ["Element", "Document", "Window"], optional = true }
gloo-events = { version = "0.1.1", optional = true }

[build-dependencies]
embed-resource = "1.4"
