[package]
name = "nodieval"
version = "0.1.0"
authors = ["Karol Belina <karolbelina@gmail.com>"]
edition = "2018"
publish = false

[profile.dev]
opt-level = 1

[features]
default = [
    "bevy/bevy_gltf",
    "bevy/bevy_winit",
    "bevy/render",
    "bevy/png",
    "bevy_kira_audio/ogg"
]

native = [
    "bevy/bevy_wgpu",
]

web = [
    "bevy_webgl2",
    "web-sys",
    "gloo-events",
]

dev = [
    "bevy/dynamic",
    "native",
]

[dependencies]
base = { path = "../base" }
bevy = { version = "0.5.0", default-features = false }
bevy_kira_audio = { version = "0.4.0" }
rand = "0.8.3"
winit = "0.24.0"

bevy_webgl2 = { version = "0.5.0", optional = true }
web-sys = { version = "0.3.45", features = ["Element", "Document", "Window"], optional = true }
gloo-events = { version = "0.1.1", optional = true }

[build-dependencies]
embed-resource = "1.4"
